# S21_3D_viewer

S21_3D/: Makefile  main.h
S21_3D/3dviewer/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
S21_3D/Back/: affine.c  tests.c
